--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
         </div>
         
     </div>
-    
+    <div class="card" style="width: 18rem;">
+        <!--tips: add .text-center,.text-right to the .card to change card text alignment-->
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="btn btn-primary">Card button</a>
+        </div>
+    </div>
 </body>
 </html>
