--- a/index.html
+++ b/index.html
@@ -39,5 +39,18 @@
             <a href="#" class="btn btn-primary">Card button</a>
         </div>
     </div>
+
+    <ul class="nav">
+        <!--tips: to change the .nav alignment use .justify-content-center,.justify-content-end or use .flex-column to vertical alignment-->
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+    </ul>
 </body>
 </html>
